tests/ui/cfg/crate-attributes-using-cfg_attr.stderr
error: the `crate_type` attribute is forbidden within a `cfg_attr` attribute
  --> $DIR/crate-attributes-using-cfg_attr.rs:5:18
   |
LL | #![cfg_attr(foo, crate_type="bin")]
   |                  ^^^^^^^^^^

error: the `crate_name` attribute is forbidden within a `cfg_attr` attribute
  --> $DIR/crate-attributes-using-cfg_attr.rs:8:18
   |
LL | #![cfg_attr(foo, crate_name="bar")]
   |                  ^^^^^^^^^^

error: the `crate_type` attribute is forbidden within a `cfg_attr` attribute
  --> $DIR/crate-attributes-using-cfg_attr.rs:5:18
   |
LL | #![cfg_attr(foo, crate_type="bin")]
   |                  ^^^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: the `crate_name` attribute is forbidden within a `cfg_attr` attribute
  --> $DIR/crate-attributes-using-cfg_attr.rs:8:18
   |
LL | #![cfg_attr(foo, crate_name="bar")]
   |                  ^^^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 4 previous errors

